# kira-collection

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: api.py  settings.py  urls.py
backend/core/: models.py  schemas.py
backend/core/migrations/: 0001_initial.py  0002_remove_user_created_at_remove_user_updated_at_and_more.py  0003_remove_user_avatar_user_avatar_url.py
frontend/: package.json  pnpm-lock.yaml
